<?xml version="1.0" encoding="utf-8"?>
<com.example.huangjinding.ub_seller.seller.view.KeyboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.huangjinding.ub_seller.HeadView
                android:id="@+id/hv_head"
                style="@style/title_height"
                android:layout_width="match_parent" />


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ub_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_number"
                    style="@style/text_fontsize_s"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/transparent"
                    android:hint="@string/find_password_input_mobile_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_light8" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/gray"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_get_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/find_password_input_get_code"
                    android:textColor="@color/text_red" />

                <EditText
                    android:id="@+id/et_code"
                    style="@style/text_fontsize_s"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/transparent"
                    android:hint="@string/find_password_input_code_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/gray"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_pwd"
                    style="@style/text_fontsize_s"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/transparent"
                    android:hint="@string/find_password_input_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="11"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/gray"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_change_pwd"
                style="@style/text_fontsize_m"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/bg_radius_red"
                android:gravity="center"
                android:text="@string/find_password_change_password"
                android:textColor="@color/white" />

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>
</com.example.huangjinding.ub_seller.seller.view.KeyboardLayout>
